fix: Responsive mode on mobile view

--- a/src/app/compare/compare.component.scss
+++ b/src/app/compare/compare.component.scss
@@ -1,11 +1,19 @@
 .compare-container{
   display: grid;
   grid-template-columns: 33% 33% 33%;
-  grid-template-rows: 25px auto
+  grid-template-rows: 25px auto;
+  
+ @media (max-width : 480px) {
+   display: flex;
+   flex-wrap: wrap;
+ }
 }
 
 .cars-dropdown{
   padding-left: 20px;
+  @media (max-width : 480px) {
+    margin: auto;
+  }
 }
 
 .title {
@@ -19,5 +27,10 @@
 
 .empty {
   background-color: ghostwhite;
-  height: 500px;;
+  height: 500px;
+
+  @media (max-width : 480px) {
+    width: 300px;
+    height: 300px;
+  }
 }
